--- a/css/style.css
+++ b/css/style.css
@@ -1388,13 +1388,12 @@ div[data-custom-properties="[object Object]"].myclass__item.choices__item--selec
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 10;
+  z-index: 100;
   max-width: 900px;
   max-height: 500px;
   width: 90%;
   height: 90vh;
   overflow: auto;
-  transition: display 0.4s ease-in-out;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.8);
   background-color: var(--color-white);
   transform: translate(-50%, -50%);
@@ -2574,6 +2573,19 @@ div[data-custom-properties="[object Object]"].myclass__item.choices__item--selec
 .footer__link.focus-visible path {
   fill: var(--color-white);
 }
+
+.overlay {
+  position: fixed;
+  bottom: -100%;
+  left: 0;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  visibility: hidden;
+  background-color: #333;
+  transition: visibility 0.4s ease-in-out, bottom 0.4s ease-in-out, opacity 0.4s ease-in-out;
+ }
 
 @media (min-width: 1470px) {
   .footer__link:hover path {
